# RGLEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  configuration.h.in  cpp-opengl.cpp  environment.cmake  rgle.cfg.in
.github/workflows/: main.yml
include/: rgle.h
lib/: CMakeLists.txt  install.sh
program/: interface.cpp  sparse-voxel.cpp
programs/: CMakeLists.txt  interface.cpp  sparse-voxel.cpp
shader/: basic3D.frag  basic3D.vert  interface.frag  interface.vert  text.frag  text.vert  textured3D.frag  textured3D.vert
shader/instancing/: instanced3D.frag  instanced3D.vert
shader/sparse-voxel/: sparse-voxel-realize.frag  sparse-voxel-realize.vert  sparse-voxel.comp
src/: Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  Config.cpp  Config.h  Console.cpp  Console.h  Event.cpp  Event.h  Exception.cpp  Exception.h  Font.cpp  Font.h  Graphics.cpp  Graphics.h  Interface.cpp  Interface.h  Logger.cpp  Logger.h  Node.cpp  Node.h  Platform.cpp  Platform.h  Raycast.cpp  Raycast.h  Renderable.cpp  Renderable.h  ShaderProgram.cpp  ShaderProgram.h  Thread.cpp  Thread.h  Window.cpp  Window.h
src/rgle/: Application.cpp  Application.h  Camera.cpp  Camera.h  Color.cpp  Color.h  Config.cpp  Config.h  Console.cpp  Console.h  Event.cpp  Event.h  Exception.cpp  Exception.h  Font.cpp  Font.h  Graphics.cpp  Graphics.h  Image.cpp  Image.h  Interface.cpp  Interface.h  Logger.cpp  Logger.h  Math.cpp  Node.cpp  Node.h  Platform.cpp  Platform.h  Raycast.cpp  Raycast.h  Renderable.cpp  Renderable.h  ShaderProgram.cpp  ShaderProgram.h  Spatial.cpp  Spatial.h  Tester.cpp  Thread.cpp  Thread.h  (+4 more)
src/rgle/gfx/: Camera.cpp  Camera.h  CharRect.cpp  CharRect.h  Font.cpp  Font.h  Graphics.cpp  Graphics.h  Image.cpp  Image.h  Renderable.cpp  Renderable.h  ShaderProgram.cpp  ShaderProgram.h  Spatial.cpp  Spatial.h
src/rgle/math/: Quadratic.cpp  Quadratic.h
src/rgle/ray/: Raycast.cpp  Raycast.h
src/rgle/res/: Font.cpp  Font.h
src/rgle/sync/: Thread.cpp  Thread.h
src/rgle/ui/: Interface.cpp  Interface.h  Text.cpp  Text.h
src/rgle/util/: Color.cpp  Color.h  Config.cpp  Config.h  Console.cpp  Console.h  Tester.cpp  Tester.h  Utility.cpp  Utility.h
test/: TestBed.h  spatial_test.cpp  thread_test.cpp  utility_test.cpp
tests/: CMakeLists.txt  raycast_test.cpp  spatial_test.cpp  thread_test.cpp  utility_test.cpp
